# divfusion

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: divfusion_pr_main.yml  divfusion_publish_main.yml  gh-python-build-test-pr-main.yml
resources_test/: MINIMAL_TEST.html  PLOTLY_TEST.html  SIMPLE_TEST.html
src/: __init__.py  static_html.py
src/static_html/: Report.py  __init__.py
test/: test_Report.py
