[metadata]
name = static_html
version = 0.0.0
author = Paul Koenig
author_email = 45401982+p-koenig@users.noreply.github.com
description = This is a statis html generator for combining multiple divs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p-koenig/static_html.git
license = Apache License 2.0
keywords = html, static, export

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.10, <4

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest~=7.1.2
    pyfakefs~=5.2.2
    plotly~=5.14.1