[metadata]
name = divfusion
version = 0.1.0
author = Paul Koenig
author_email = 45401982+p-koenig@users.noreply.github.com
description = divfusion takes multiple html elements and generates a stand-alone HTML-Report while managing styling and layout.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p-koenig/divfusion.git
license = Apache License 2.0
keywords = html, static, export

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.10, <4

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest~=7.1.2
    pyfakefs~=5.2.2
    plotly~=5.14.1